# wagtail-inventory

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  testmanage.py  tox.ini
.github/workflows/: release.yml  test.yml
wagtailinventory/: apps.py  checks.py  forms.py  helpers.py  models.py  urls.py  views.py  wagtail_hooks.py
wagtailinventory/fixtures/: test_blocks.json
wagtailinventory/management/commands/: block_inventory.py
wagtailinventory/migrations/: 0001_initial.py  0002_pageblock_unique_constraint.py  0003_pageblock_id_bigautofield.py
wagtailinventory/templates/wagtailinventory/: _list_explore_inventory.html  inventory_report.html  search.html
wagtailinventory/tests/: settings.py  test_checks.py  test_forms.py  test_helpers.py  test_models.py  test_views.py  test_wagtail_hooks.py  urls.py
wagtailinventory/tests/testapp/: blocks.py  models.py
wagtailinventory/tests/testapp/migrations/: 0001_initial.py  0002_nested_stream_block_page.py  0003_single_content_block_optional.py
