[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-inventory"
dynamic = ["version"]
description = "Wagtail report to filter pages by block content"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "CC0"}
authors = [
    {name = "CFPB", email = "tech@cfpb.gov" }
]
dependencies = [
    "tqdm>=4.15.0,<5",
    "wagtail>=6.2",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
testing = [
    "coverage[toml]",
]

[project.urls]
"Homepage" = "https://github.com/cfpb/wagtail-inventory"
"Bug Reports" = "https://github.com/cfpb/wagtail-inventory/issues"
"Source" = "https://github.com/cfpb/wagtail-inventory"

[tool.setuptools.package-data]
inventory = [
    "templates/wagtailinventory/*",
]

[tool.setuptools_scm]

[tool.ruff]
# Use PEP8 line-length
line-length = 79
# Exclude common paths
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "**/migrations/*.py",
]

[tool.ruff.lint]
ignore = ["E731", ]
# Select specific rulesets to use
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail"]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "django",
    "wagtail",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.coverage.run]
omit = [
    "wagtailinventory/tests/*",
]

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
]

